--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/Doron1246/Doron-Levi-21-06-2022/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/Doron1246/Doron-Levi-21-06-2022/logo192.png"/><link rel="manifest" href="/Doron1246/Doron-Levi-21-06-2022/manifest.json"/><title>React App</title><script defer="defer" src="/Doron1246/Doron-Levi-21-06-2022/static/js/main.bb1a00dc.js"></script><link href="/Doron1246/Doron-Levi-21-06-2022/static/css/main.11e063eb.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="favicon.ico" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Web site created using create-react-app"
+    />
+    <link rel="apple-touch-icon" href="logo192.png" />
+    <link rel="manifest" href="manifest.json" />
+    <title>React App</title>
+    <script defer="defer" src="main.bb1a00dc.js"></script>
+    <link href="main.11e063eb.css" rel="stylesheet" />
+  </head>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+  </body>
+</html>
